@@ -1,0 +1,43 @@
+<h2>comments</h2>
+{if:aComments}
+
+<div id="comments" flexy:foreach="aComments,key,oComment">
+    <div>here is my comment {key}</div>
+</div>
+
+{else:}
+<i>be the first to leave a comment</i>
+{end:}
+
+<div id="addComment">
+<form method="post" flexy:ignore>
+    <fieldset class="hide">
+        <input type="hidden" name="action" value="insert" />
+        <input type="hidden" name="seagull_uri" value="{seagull_uri}" />
+        <input type="hidden" name="comment[parent_id]" value="{comment.parent_id}" />
+    </fieldset>
+
+    <fieldset>
+    <legend>Enter your comment</legend>
+        <p>
+            <label for="comment[name]">Name:</label>
+            <div class="error" flexy:if="error[name]">{translate(error[name])}</div>
+            <input type="text" name="comment[name]" id="comment[name]" value="{comment.question}" />
+        </p>
+        <p>
+            <label for="comment[title]">Title:</label>
+            <div class="error" flexy:if="error[subject]">{translate(error[subject])}</div>
+            <input type="text" name="comment[subject]" id="comment[subject]" value="{comment.subject}" />
+        </p>
+        <p>
+            <label for="comment[comment]">Comment:</label>
+            <div class="error" flexy:if="error[comment]">{translate(error[comment])}</div>
+            <textarea name="comment[comment]" id="comment[comment]" />{comment.comment}</textarea>
+        </p>
+        <p>
+            <input type="submit" name="submitted" value="submit" />
+        </p>
+    </fieldset>
+
+</form>
+</div>
