@@ -61,6 +61,14 @@ class FaqMgr extends SGL_Manager
         $this->_aActionsMapping = array(
             'list' => array('list'),
         );
+        //  enable comments if configured
+        if (SGL::moduleIsEnabled('comment')) {
+            require_once SGL_MOD_DIR  . '/comment/classes/CommentDAO.php';
+            require_once SGL_CORE_DIR . '/Delegator.php';
+            $dao = &CommentDAO::singleton();
+            $this->da  = new SGL_Delegator();
+            $this->da->add($dao);
+        }
     }
 
     function validate($req, &$input)
@@ -91,6 +99,10 @@ class FaqMgr extends SGL_Manager
             }
         }
         $output->results = $aFaqs;
+
+        if (!empty($this->conf['FaqMgr']['commentsEnabled'])) {
+            $output->aComments = $this->da->getCommentsByEntityId('faq');
+        }
     }
 }
 
