@@ -1,5 +1,6 @@
 [FaqMgr]
 requiresAuth    = false
+commentsEnabled = false
 
 [AdminFaqMgr]
 requiresAuth    = true
